website/i18n/zh-CN/docusaurus-plugin-content-docs/version-3.3.2/api/docusaurus.config.js.mdx
---
sidebar_position: 0
description: API reference for Docusaurus configuration file.
slug: /api/docusaurus-config
---

# `docusaurus.config.js`

import APITable from '@site/src/components/APITable';

:::info

参考入门指南中的[**配置**](../configuration.mdx)部分查看示例。

:::

## 概述 {#overview}

`docusaurus.config.js` 包含您站点的配置信息，位于站点的根目录下。

:::note

对于使用 [TypeScript](../typescript-support.mdx) 的 Docusaurus 代码库，配置文件可能命名为 `docusaurus.config.ts`。其语法与 `js` 配置文件基本相同，但增加了类型支持。您可以在 [Docusaurus 官方网站](https://github.com/facebook/docusaurus/blob/main/website/docusaurus.config.ts) 上查看示例。

:::

该文件在 Node.js 环境中运行，应导出一个站点配置对象或创建该对象的函数。

`docusaurus.config.js` 文件支持：

- [**ES Modules**](https://flaviocopes.com/es-modules/)
- [**CommonJS**](https://flaviocopes.com/commonjs/)
- [**TypeScript**](../typescript-support.mdx#typing-config)

示例：

```js title="docusaurus.config.js"
export default {
  title: 'Docusaurus',
  url: 'https://docusaurus.io',
  // your site config ...
};
```

```js title="docusaurus.config.js"
export default async function createConfigAsync() {
  return {
    title: 'Docusaurus',
    url: 'https://docusaurus.io',
    // your site config ...
  };
}
```

:::tip

参考 [**声明 `docusaurus.config.js` 的语法**](../configuration.mdx#syntax-to-declare-docusaurus-config) 获取更详尽的示例和解释。

:::

## 必填字段 {#required-fields}

### `title` {#title}

- 类型：`string`

站点的标题。将用于元数据和浏览器标签页标题。

```js title="docusaurus.config.js"
export default {
  title: 'Docusaurus',
};
```

### `url` {#url}

- 类型：`string`

站点的 URL。可以视为顶级主机名。例如，`https://facebook.github.io` 是 https://facebook.github.io/metro/ 的 URL，而 `https://docusaurus.io` 是 https://docusaurus.io 的 URL。该字段与 [`baseUrl`](#baseUrl) 字段相关。

```js title="docusaurus.config.js"
export default {
  url: 'https://docusaurus.io',
};
```

### `baseUrl` {#baseUrl}

- 类型：`string`

站点的基础 URL。可以视为主机名之后的路径。例如，`/metro/` 是 https://facebook.github.io/metro/ 的基础 URL。对于没有路径的 URL，`baseUrl` 应设置为 `/`。该字段与 [`url`](#url) 字段相关。始终包含前导和尾随斜杠。

```js title="docusaurus.config.js"
export default {
  baseUrl: '/',
};
```

## 可选字段 {#optional-fields}

### `favicon` {#favicon}

- 类型：`string | undefined`

站点图标的路径；必须是一个可用于链接 `href` 的 URL。例如，如果您的图标位于 `static/img/favicon.ico`：

```js title="docusaurus.config.js"
export default {
  favicon: '/img/favicon.ico',
};
```

### `trailingSlash` {#trailingSlash}

- 类型：`boolean | undefined`

允许自定义 URL/链接末尾是否包含尾随斜杠，以及如何生成静态 HTML 文件：

- `undefined`（默认）：保持 URL 不变，并为 `/docs/myDoc.md` 生成 `/docs/myDoc/index.html`
- `true`：为 URL/链接添加尾随斜杠，并为 `/docs/myDoc.md` 生成 `/docs/myDoc/index.html`
- `false`：从 URL/链接中移除尾随斜杠，并为 `/docs/myDoc.md` 生成 `/docs/myDoc.html`

:::tip

每个静态托管服务提供商处理静态文件的方式各不相同（此行为可能随时间变化）。

请参阅[部署指南](../deployment.mdx)和[slorber/trailing-slash-guide](https://github.com/slorber/trailing-slash-guide)以选择合适的配置。

:::

### `i18n` {#i18n}

- 类型: `Object`

用于[本地化站点](../i18n/i18n-introduction.mdx)的国际化配置对象。

示例:

```js title="docusaurus.config.js"
export default {
  i18n: {
    defaultLocale: 'en',
    locales: ['en', 'fa'],
    path: 'i18n',
    localeConfigs: {
      en: {
        label: 'English',
        direction: 'ltr',
        htmlLang: 'en-US',
        calendar: 'gregory',
        path: 'en',
      },
      fa: {
        label: 'فارسی',
        direction: 'rtl',
        htmlLang: 'fa-IR',
        calendar: 'persian',
        path: 'fa',
      },
    },
  },
};
```

- `defaultLocale`: 该语言环境 (1) 不会在基础URL中显示其名称 (2) 使用`docusaurus start`命令时不带`--locale`选项时会默认使用 (3) 将用于`<link hrefLang="x-default">`标签
- `locales`: 站点部署的所有语言环境列表。必须包含`defaultLocale`。
- `path`: 所有语言环境文件夹的相对根文件夹。可以是绝对路径或相对于配置文件的路径。默认为`i18n`。
- `localeConfigs`: 每个语言环境的单独配置。
  - `label`: 在语言切换下拉菜单中显示的名称。
  - `direction`: `ltr`（默认）或`rtl`（用于[从右到左的语言](https://developer.mozilla.org/en-US/docs/Glossary/rtl)如波斯语、阿拉伯语、希伯来语等）。用于选择语言环境的CSS和HTML元属性。
  - `htmlLang`: 用于`<html lang="...">`（或任何其他DOM标签）和`<link ... hreflang="...">`的BCP 47语言标签。
  - `calendar`: 用于计算日期纪元的[日历](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Intl/Locale/calendar)。注意它不控制实际显示的字符串格式：`MM/DD/YYYY`和`DD/MM/YYYY`都属于`gregory`。要选择格式（`DD/MM/YYYY`或`MM/DD/YYYY`），请将语言环境名称设置为`en-GB`或`en-US`（`en`表示`en-US`）。
  - `path`: 该语言环境所有插件本地化文件夹的相对根文件夹。将相对于`i18n.path`解析。默认为语言环境名称。注意：这不会影响语言环境的`baseUrl`——基础URL的自定义功能正在开发中。

### `noIndex` {#noIndex}

- 类型: `boolean`

此选项会在每个页面添加`<meta name="robots" content="noindex, nofollow">`，告诉搜索引擎不要索引您的站点（更多信息[参见此处](https://moz.com/learn/seo/robots-meta-directives)）。

示例:

```js title="docusaurus.config.js"
export default {
  noIndex: true, // Defaults to `false`
};
```

### `onBrokenLinks` {#onBrokenLinks}

- 类型: `'ignore' | 'log' | 'warn' | 'throw'`

Docusaurus检测到损坏链接时的处理行为。

默认情况下会抛出错误，确保不会发布任何损坏的链接。

:::note

损坏链接检测仅在生产构建（`docusaurus build`）时可用。

:::

### `onBrokenAnchors` {#onBrokenAnchors}

- 类型: `'ignore' | 'log' | 'warn' | 'throw'`

Docusaurus检测到使用Docusaurus的`Heading`组件声明的损坏锚点时的处理行为。

默认情况下会显示警告，提醒您存在损坏的锚点。

### `onBrokenMarkdownLinks` {#onBrokenMarkdownLinks}

- 类型: `'ignore' | 'log' | 'warn' | 'throw'`

Docusaurus检测到损坏的Markdown链接时的处理行为。

默认情况下，它会输出警告信息，以便您了解存在损坏的Markdown链接。

### `onDuplicateRoutes` {#onDuplicateRoutes}

- 类型: `'ignore' | 'log' | 'warn' | 'throw'`

当Docusaurus检测到[重复路由](/guides/creating-pages.mdx#duplicate-routes)时的处理行为。

默认情况下，在运行`yarn start`或`yarn build`后会显示警告。

### `tagline` {#tagline}

- 类型: `string`

网站的标语。

```js title="docusaurus.config.js"
export default {
  tagline:
    'Docusaurus makes it easy to maintain Open Source documentation websites.',
};
```

### `organizationName` {#organizationName}

- 类型: `string`

拥有该代码仓库的GitHub用户或组织名称。如果不使用`docusaurus deploy`命令则无需配置此项。

```js title="docusaurus.config.js"
export default {
  // Docusaurus' organization is facebook
  organizationName: 'facebook',
};
```

### `projectName` {#projectName}

- 类型: `string`

GitHub仓库名称。如果不使用`docusaurus deploy`命令则无需配置此项。

```js title="docusaurus.config.js"
export default {
  projectName: 'docusaurus',
};
```

### `deploymentBranch` {#deploymentBranch}

- 类型: `string`

用于部署静态文件的分支名称。如果不使用`docusaurus deploy`命令则无需配置此项。

```js title="docusaurus.config.js"
export default {
  deploymentBranch: 'gh-pages',
};
```

### `githubHost` {#githubHost}

- 类型: `string`

服务器主机名。适用于GitHub Enterprise用户。如果不使用`docusaurus deploy`命令则无需配置此项。

```js title="docusaurus.config.js"
export default {
  githubHost: 'github.com',
};
```

### `githubPort` {#githubPort}

- 类型: `string`

服务器端口号。适用于GitHub Enterprise用户。如果不使用`docusaurus deploy`命令则无需配置此项。

```js title="docusaurus.config.js"
export default {
  githubPort: '22',
};
```

### `themeConfig` {#themeConfig}

- 类型: `Object`

用于自定义网站UI（如导航栏和页脚）的[主题配置](./themes/theme-configuration.mdx)对象。

示例:

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    docs: {
      sidebar: {
        hideable: false,
        autoCollapseCategories: false,
      },
    },
    colorMode: {
      defaultMode: 'light',
      disableSwitch: false,
      respectPrefersColorScheme: true,
    },
    navbar: {
      title: 'Site Title',
      logo: {
        alt: 'Site Logo',
        src: 'img/logo.svg',
        width: 32,
        height: 32,
      },
      items: [
        {
          to: 'docs/docusaurus.config.js',
          activeBasePath: 'docs',
          label: 'docusaurus.config.js',
          position: 'left',
        },
        // ... other links
      ],
    },
    footer: {
      style: 'dark',
      links: [
        {
          title: 'Docs',
          items: [
            {
              label: 'Docs',
              to: 'docs/doc1',
            },
          ],
        },
        // ... other links
      ],
      logo: {
        alt: 'Meta Open Source Logo',
        src: 'img/meta_oss_logo.png',
        href: 'https://opensource.fb.com',
        width: 160,
        height: 51,
      },
      copyright: `Copyright © ${new Date().getFullYear()} Facebook, Inc.`, // You can also put own HTML here
    },
  },
};
```

### `plugins` {#plugins}

- 类型: `PluginConfig[]`

```ts
type PluginConfig = string | [string, any] | PluginModule | [PluginModule, any];
```

有关`PluginModule`的结构，请参阅[插件方法参考](./plugin-methods/README.mdx)。

```js title="docusaurus.config.js"
export default {
  plugins: [
    'docusaurus-plugin-awesome',
    ['docusuarus-plugin-confetti', {fancy: false}],
    () => ({
      postBuild() {
        console.log('Build finished');
      },
    }),
  ],
};
```

### `themes` {#themes}

- 类型: `PluginConfig[]`

```js title="docusaurus.config.js"
export default {
  themes: ['@docusaurus/theme-classic'],
};
```

### `presets` {#presets}

- 类型: `PresetConfig[]`

```ts
type PresetConfig = string | [string, any];
```

```js title="docusaurus.config.js"
export default {
  presets: [],
};
```

### `markdown` {#markdown}

Docusaurus全局Markdown配置。

- 类型: `MarkdownConfig`

```ts
type MarkdownPreprocessor = (args: {
  filePath: string;
  fileContent: string;
}) => string;

type MDX1CompatOptions =
  | boolean
  | {
      comments: boolean;
      admonitions: boolean;
      headingIds: boolean;
    };

export type ParseFrontMatter = (params: {
  filePath: string;
  fileContent: string;
  defaultParseFrontMatter: ParseFrontMatter;
}) => Promise<{
  frontMatter: {[key: string]: unknown};
  content: string;
}>;

type MarkdownAnchorsConfig = {
  maintainCase: boolean;
};

type MarkdownConfig = {
  format: 'mdx' | 'md' | 'detect';
  mermaid: boolean;
  preprocessor?: MarkdownPreprocessor;
  parseFrontMatter?: ParseFrontMatter;
  mdx1Compat: MDX1CompatOptions;
  remarkRehypeOptions: object; // see https://github.com/remarkjs/remark-rehype#options
  anchors: MarkdownAnchorsConfig;
};
```

示例:

```js title="docusaurus.config.js"
export default {
  markdown: {
    format: 'mdx',
    mermaid: true,
    preprocessor: ({filePath, fileContent}) => {
      return fileContent.replaceAll('{{MY_VAR}}', 'MY_VALUE');
    },
    parseFrontMatter: async (params) => {
      const result = await params.defaultParseFrontMatter(params);
      result.frontMatter.description =
        result.frontMatter.description?.replaceAll('{{MY_VAR}}', 'MY_VALUE');
      return result;
    },
    mdx1Compat: {
      comments: true,
      admonitions: true,
      headingIds: true,
    },
    anchors: {
      maintainCase: true,
    },
  },
};
```

<APITable>

| Name | Type | Default | Description |
| --- | --- | --- | --- |
| `format` | `'mdx' \| 'md' \| 'detect'` | `'mdx'` | The default parser format to use for Markdown content. Using 'detect' will select the appropriate format automatically based on file extensions: `.md` vs `.mdx`. |
| `mermaid` | `boolean` | `false` | When `true`, allows Docusaurus to render Markdown code blocks with `mermaid` language as Mermaid diagrams. |
| `preprocessor` | `MarkdownPreprocessor` | `undefined` | Gives you the ability to alter the Markdown content string before parsing. Use it as a last-resort escape hatch or workaround: it is almost always better to implement a Remark/Rehype plugin. |
| `parseFrontMatter` | `ParseFrontMatter` | `undefined` | Gives you the ability to provide your own front matter parser, or to enhance the default parser. Read our [front matter guide](../guides/markdown-features/markdown-features-intro.mdx#front-matter) for details. |
| `mdx1Compat` | `MDX1CompatOptions` | `{comments: true, admonitions: true, headingIds: true}` | Compatibility options to make it easier to upgrade to Docusaurus v3+. |
| `anchors` | `MarkdownAnchorsConfig` | `{maintainCase: false}` | Options to control the behavior of anchors generated from Markdown headings |
| `remarkRehypeOptions` | `object` | `undefined` | Makes it possible to pass custom [`remark-rehype` options](https://github.com/remarkjs/remark-rehype#options). |

</APITable>

### `customFields` {#customFields}

Docusaurus 会防止 `docusaurus.config.js` 中出现未知字段。如需添加自定义字段，请在 `customFields` 中定义。

- 类型：`Object`

```js title="docusaurus.config.js"
export default {
  customFields: {
    admin: 'endi',
    superman: 'lol',
  },
};
```

尝试在配置中添加未知字段会导致构建时出错：

```bash
Error: The field(s) 'foo', 'bar' are not recognized in docusaurus.config.js
```

### `staticDirectories` {#staticDirectories}

路径数组（相对于站点目录或绝对路径）。这些路径下的文件将原样复制到构建输出目录。

- 类型：`string[]`

示例：

```js title="docusaurus.config.js"
export default {
  staticDirectories: ['static'],
};
```

### `headTags` {#headTags}

将插入 HTML `<head>` 的标签数组。值必须为包含两个属性的对象：`tagName` 和 `attributes`。`tagName` 是决定创建标签的字符串（如 `"link"`），`attributes` 是属性-值的映射表。

- 类型：`{ tagName: string; attributes: Object; }[]`

示例：

```js title="docusaurus.config.js"
export default {
  headTags: [
    {
      tagName: 'link',
      attributes: {
        rel: 'icon',
        href: '/img/docusaurus.png',
      },
    },
  ],
};
```

这将在生成的 HTML 中转换为 `<link rel="icon" href="img/docusaurus.png" />`。

### `scripts` {#scripts}

需加载的脚本数组。值可以是字符串或属性-值映射的普通对象。`<script>` 标签将插入 HTML `<head>`。若使用普通对象，唯一必需属性是 `src`，其他属性均为可选（值为布尔值/字符串）。

注意：此处添加的 `<script>` 会阻塞渲染，建议在对象中添加 `async: true`/`defer: true`。

- 类型：`(string | Object)[]`

示例：

```js title="docusaurus.config.js"
export default {
  scripts: [
    // String format.
    'https://docusaurus.io/script.js',
    // Object format.
    {
      src: 'https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.0/clipboard.min.js',
      async: true,
    },
  ],
};
```

### `stylesheets` {#stylesheets}

需加载的 CSS 源数组。值可以是字符串或属性-值映射的普通对象。`<link>` 标签将插入 HTML `<head>`。若使用对象，唯一必需属性是 `href`，其他属性均为可选（值为布尔值/字符串）。

- 类型：`(string | Object)[]`

示例：

```js title="docusaurus.config.js"
export default {
  stylesheets: [
    // String format.
    'https://docusaurus.io/style.css',
    // Object format.
    {
      href: 'http://mydomain.com/style.css',
    },
  ],
};
```

:::info

默认情况下 `<link>` 标签会带 `rel="stylesheet"`，但可通过显式添加自定义 `rel` 值来注入任意类型的 `<link>` 标签（不限于样式表）。

:::

### `clientModules` {#clientModules}

需在站点全局加载的[客户端模块](../advanced/client.mdx#client-modules)数组。

示例：

```js title="docusaurus.config.js"
export default {
  clientModules: ['./mySiteGlobalJs.js', './mySiteGlobalCss.css'],
};
```

### `ssrTemplate` {#ssrTemplate}

采用 [Eta 语法](https://eta.js.org/docs/syntax#syntax-overview)编写的 HTML 模板，用于渲染应用。可用来设置 `body` 标签的自定义属性、额外 `meta` 标签、自定义视口等。请注意：自定义模板需确保符合上游要求的结构，否则会影响 Docusaurus 正常运行。

- 类型：`string`

示例：

```js title="docusaurus.config.js"
export default {
  ssrTemplate: `<!DOCTYPE html>
<html <%~ it.htmlAttributes %>>
  <head>
    <meta charset="UTF-8">
    <meta name="generator" content="Docusaurus v<%= it.version %>">
    <% it.metaAttributes.forEach((metaAttribute) => { %>
      <%~ metaAttribute %>
    <% }); %>
    <%~ it.headTags %>
    <% it.stylesheets.forEach((stylesheet) => { %>
      <link rel="stylesheet" href="<%= it.baseUrl %><%= stylesheet %>" />
    <% }); %>
    <% it.scripts.forEach((script) => { %>
      <link rel="preload" href="<%= it.baseUrl %><%= script %>" as="script">
    <% }); %>
  </head>
  <body <%~ it.bodyAttributes %>>
    <%~ it.preBodyTags %>
    <div id="__docusaurus">
      <%~ it.appHtml %>
    </div>
    <% it.scripts.forEach((script) => { %>
      <script src="<%= it.baseUrl %><%= script %>"></script>
    <% }); %>
    <%~ it.postBodyTags %>
  </body>
</html>`,
};
```

### `titleDelimiter` {#titleDelimiter}

- 类型：`string`

将作为生成 `<title>` 标签时的标题分隔符。

示例：

```js title="docusaurus.config.js"
export default {
  titleDelimiter: '🦖', // Defaults to `|`
};
```

### `baseUrlIssueBanner` {#baseUrlIssueBanner}

- 类型：`boolean`

启用后，当站点无法加载 CSS 或 JavaScript 文件时（通常由站点配置中错误的 `baseUrl` 导致），将显示警示横幅。

示例：

```js title="docusaurus.config.js"
export default {
  baseUrlIssueBanner: true, // Defaults to `true`
};
```

![基础URL问题横幅示例。由于样式表加载失败，显示样式较为原始。文字内容为「您的Docusaurus站点加载异常...当前配置的baseUrl = /（默认值）；建议尝试baseUrl = /build/」](/img/baseUrlIssueBanner.png)

:::warning

由于该横幅需要在所有资源因基础URL错误而加载失败时内联CSS/JS，若您启用了严格的[内容安全策略](https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP)，建议禁用此功能。

:::